// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtPagination Event AtPagination onPageChange - next 1`] = `
<view
  class="at-pagination"
>
  <!-- btn prev -->
  <view
    class="at-pagination__btn-prev"
  >
    <!--v-if-->
    <view
      class="at-button--small at-button"
    >
      <!-- web button -->
      <button
        class="at-button__wxbutton"
        lang="lang"
      />
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        上一页
        
      </view>
    </view>
  </view>
  <!-- pagination number -->
  <view
    class="at-pagination__number"
  >
    <text
      class="at-pagination__number-current"
    >
      2
    </text>
    <text>
      /5
    </text>
  </view>
  <!-- btn next -->
  <view
    class="at-pagination__btn-next"
  >
    <!--v-if-->
    <view
      class="at-button--small at-button"
    >
      <!-- web button -->
      <button
        class="at-button__wxbutton"
        lang="lang"
      />
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        下一页
        
      </view>
    </view>
  </view>
</view>
`;

exports[`AtPagination Event AtPagination onPageChange - prev 1`] = `
<view
  class="at-pagination"
>
  <!-- btn prev -->
  <view
    class="at-pagination__btn-prev"
  >
    <!--v-if-->
    <view
      class="at-button--small at-button"
    >
      <!-- web button -->
      <button
        class="at-button__wxbutton"
        lang="lang"
      />
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        上一页
        
      </view>
    </view>
  </view>
  <!-- pagination number -->
  <view
    class="at-pagination__number"
  >
    <text
      class="at-pagination__number-current"
    >
      2
    </text>
    <text>
      /5
    </text>
  </view>
  <!-- btn next -->
  <view
    class="at-pagination__btn-next"
  >
    <!--v-if-->
    <view
      class="at-button--small at-button"
    >
      <!-- web button -->
      <button
        class="at-button__wxbutton"
        lang="lang"
      />
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        下一页
        
      </view>
    </view>
  </view>
</view>
`;

exports[`AtPagination Event AtPagination onPageChange not to be called(disabled prev or next) 1`] = `
<view
  class="at-pagination"
>
  <!-- btn prev -->
  <view
    class="at-pagination__btn-prev"
  >
    <!--v-if-->
    <view
      class="at-button--small at-button--disabled at-button"
    >
      <!-- web button -->
      <!--v-if-->
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        上一页
        
      </view>
    </view>
  </view>
  <!-- pagination number -->
  <view
    class="at-pagination__number"
  >
    <text
      class="at-pagination__number-current"
    >
      1
    </text>
    <text>
      /1
    </text>
  </view>
  <!-- btn next -->
  <view
    class="at-pagination__btn-next"
  >
    <!--v-if-->
    <view
      class="at-button--small at-button--disabled at-button"
    >
      <!-- web button -->
      <!--v-if-->
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        下一页
        
      </view>
    </view>
  </view>
</view>
`;

exports[`AtPagination Snap render AtPagination -- props current 1`] = `
<view
  class="at-pagination"
>
  <!-- btn prev -->
  <view
    class="at-pagination__btn-prev"
  >
    <!--v-if-->
    <view
      class="at-button--small at-button--disabled at-button"
    >
      <!-- web button -->
      <!--v-if-->
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        上一页
        
      </view>
    </view>
  </view>
  <!-- pagination number -->
  <view
    class="at-pagination__number"
  >
    <text
      class="at-pagination__number-current"
    >
      2
    </text>
    <text>
      /1
    </text>
  </view>
  <!-- btn next -->
  <view
    class="at-pagination__btn-next"
  >
    <!--v-if-->
    <view
      class="at-button--small at-button--disabled at-button"
    >
      <!-- web button -->
      <!--v-if-->
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        下一页
        
      </view>
    </view>
  </view>
</view>
`;

exports[`AtPagination Snap render AtPagination -- props icon 1`] = `
<view
  class="at-pagination at-pagination--icon"
>
  <!-- btn prev -->
  <view
    class="at-pagination__btn-prev"
  >
    <view
      class="at-button--small at-button--disabled at-button"
    >
      <!-- web button -->
      <!--v-if-->
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        <text
          class="at-icon at-icon-chevron-left"
        />
        
      </view>
    </view>
    <!--v-if-->
  </view>
  <!-- pagination number -->
  <view
    class="at-pagination__number"
  >
    <text
      class="at-pagination__number-current"
    >
      1
    </text>
    <text>
      /1
    </text>
  </view>
  <!-- btn next -->
  <view
    class="at-pagination__btn-next"
  >
    <view
      class="at-button--small at-button--disabled at-button"
    >
      <!-- web button -->
      <!--v-if-->
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        <text
          class="at-icon at-icon-chevron-right"
        />
        
      </view>
    </view>
    <!--v-if-->
  </view>
</view>
`;

exports[`AtPagination Snap render AtPagination -- props pageSize 1`] = `
<view
  class="at-pagination"
>
  <!-- btn prev -->
  <view
    class="at-pagination__btn-prev"
  >
    <!--v-if-->
    <view
      class="at-button--small at-button--disabled at-button"
    >
      <!-- web button -->
      <!--v-if-->
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        上一页
        
      </view>
    </view>
  </view>
  <!-- pagination number -->
  <view
    class="at-pagination__number"
  >
    <text
      class="at-pagination__number-current"
    >
      1
    </text>
    <text>
      /1
    </text>
  </view>
  <!-- btn next -->
  <view
    class="at-pagination__btn-next"
  >
    <!--v-if-->
    <view
      class="at-button--small at-button--disabled at-button"
    >
      <!-- web button -->
      <!--v-if-->
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        下一页
        
      </view>
    </view>
  </view>
</view>
`;

exports[`AtPagination Snap render AtPagination -- props total 1`] = `
<view
  class="at-pagination"
>
  <!-- btn prev -->
  <view
    class="at-pagination__btn-prev"
  >
    <!--v-if-->
    <view
      class="at-button--small at-button--disabled at-button"
    >
      <!-- web button -->
      <!--v-if-->
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        上一页
        
      </view>
    </view>
  </view>
  <!-- pagination number -->
  <view
    class="at-pagination__number"
  >
    <text
      class="at-pagination__number-current"
    >
      1
    </text>
    <text>
      /5
    </text>
  </view>
  <!-- btn next -->
  <view
    class="at-pagination__btn-next"
  >
    <!--v-if-->
    <view
      class="at-button--small at-button"
    >
      <!-- web button -->
      <button
        class="at-button__wxbutton"
        lang="lang"
      />
      <!-- weapp button -->
      <!--v-if-->
      <!-- alipay button -->
      <!--v-if-->
      <!-- loading && icon -->
      <!--v-if-->
      <!-- button text slot -->
      <view
        class="at-button__text"
      >
        
        下一页
        
      </view>
    </view>
  </view>
</view>
`;
